--- a/Lyyneheym/Hemerocallis/Forms/MainWindow.xaml
+++ b/Lyyneheym/Hemerocallis/Forms/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:UISupport="clr-namespace:Yuri.Hemerocallis.UISupport" x:Class="Yuri.Hemerocallis.Forms.MainWindow"
-        mc:Ignorable="d"
+        mc:Ignorable="d" WindowTransitionsEnabled="False"
 		TextOptions.TextFormattingMode="Display" TextOptions.TextRenderingMode="ClearType"
                       Title="Hemerocallis" Height="720" Width="1280" MinWidth="1024" MinHeight="576" WindowStartupLocation="CenterScreen" KeyDown="MetroWindow_KeyDown">
     <controls:MetroWindow.Resources>
@@ -75,25 +75,13 @@
                 <ImageBrush x:Name="MainAreaBackgroundBrush" ImageSource="/Hemerocallis;component/Assets/bg_Hemo.jpg" TileMode="Tile" Viewport="0,0,1500,1334" ViewportUnits="Absolute"/>
             </Grid.Background>
         </Grid>
-        <!-- 正文文本框 -->
-        <RichTextBox x:Name="RichTextBox_TextArea" Grid.Column="1" Grid.Row="1" Margin="0,0,0,25" Padding="10,0,10,5" FontSize="22" Height="{Binding ActualHeight, ElementName=mainCanvas, Mode=OneWay}" FontFamily="Microsoft YaHei" BorderBrush="{x:Null}" CaretBrush="Black" BorderThickness="0" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Width="{Binding ActualWidth, ElementName=mainCanvas, Mode=OneWay}" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Background="{x:Null}">
-            <RichTextBox.Effect>
-                <DropShadowEffect x:Name="RichTextBox_DropShadowEffect" Color="Black" Direction="0" ShadowDepth="0" Opacity="0.3"/>
-            </RichTextBox.Effect>
-            <FlowDocument x:Name="RichTextBox_FlowDocument" LineHeight="10" Foreground="#FF2C3F51">
-                <Paragraph>
-                    <Run Text="Hemerocallis 233 萱草"/>
-                </Paragraph>
-                <Paragraph>
-                    <Run Text="爱若执炬迎风，炽烈而哀恸，诸般滋味皆在其中。"/>
-                </Paragraph>
-            </FlowDocument>
-        </RichTextBox>
+        <!-- 正文页面 -->
+        <Frame Name="Frame_RTB" Grid.Row="1" Grid.Column="1" NavigationUIVisibility="Hidden" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Source="/Hemerocallis;component/Forms/IndexPage.xaml" />
         <!-- 状态栏 -->
         <TextBlock x:Name="TextBlock_StateBar" Grid.Row="1" Grid.Column="1" Text="Line: 2     Column: 16     Word: 3612" FontSize="16" TextAlignment="Right" Padding="0,1.3,10,0" Foreground="Gray" FontWeight="Bold" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="466"/>
         <TextBlock x:Name="TextBlock_MsgBar" Grid.Row="1" Grid.Column="1" Text="Saved" FontSize="16" TextAlignment="Left" Padding="10,1.3,0,0" Foreground="Gray" FontWeight="Bold" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="550"/>
         <!-- 右上角命令栏 -->
-        <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Right">
+        <StackPanel Name="StackPanel_Commands" Grid.Column="1" Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Right">
             <Image ToolTip="创建一个贴纸" Source="/Hemerocallis;component/Assets/UI_Btn_Refer.png" Opacity="0.4" Height="48" Width="48" MouseEnter="Image_TRBtn_MouseEnter" MouseLeave="Image_TRBtn_MouseLeave"/>
             <Image ToolTip="管理工程" Source="/Hemerocallis;component/Assets/UI_Btn_Note.png" Opacity="0.4" Height="48" Width="48" MouseEnter="Image_TRBtn_MouseEnter" MouseLeave="Image_TRBtn_MouseLeave"/>
             <Rectangle Width="2" Margin="10,5,10,5" Fill="Black" Opacity="0.1"/>
@@ -102,7 +90,7 @@
             <Image ToolTip="菜单" Source="/Hemerocallis;component/Assets/UI_Btn_Menu.png" Opacity="0.4" Height="48" Width="48" MouseLeftButtonUp="Image_MouseLeftButtonUp_MenuBtn" MouseEnter="Image_TRBtn_MouseEnter" MouseLeave="Image_TRBtn_MouseLeave"/>
         </StackPanel>
         <!-- 左上角章节名 -->
-        <TextBlock Grid.Column="1" Grid.Row="0" Foreground="LightSteelBlue" Text="Chapter 2 - 恋恋不舍" FontSize="22" Padding="50,8,0,0" TextAlignment="Left" IsHitTestVisible="False">
+        <TextBlock Name="TextBlock_CurrentChapterName" Grid.Column="1" Grid.Row="0" Foreground="LightSteelBlue" Text="Chapter 2 - 恋恋不舍" FontSize="22" Padding="50,8,0,0" TextAlignment="Left" IsHitTestVisible="False">
             <TextBlock.Effect>
                 <DropShadowEffect Color="Black" Direction="0" ShadowDepth="0" Opacity="0.1" />
             </TextBlock.Effect>
