--- a/Lyyneheym/Hemerocallis/Forms/MainWindow.xaml
+++ b/Lyyneheym/Hemerocallis/Forms/MainWindow.xaml
@@ -78,15 +78,15 @@
         <!-- 正文页面 -->
         <Frame Name="Frame_RTB" Grid.Row="1" Grid.Column="1" NavigationUIVisibility="Hidden" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Source="/Hemerocallis;component/Forms/IndexPage.xaml" />
         <!-- 状态栏 -->
-        <TextBlock x:Name="TextBlock_StateBar" Grid.Row="1" Grid.Column="1" Text="Line: 2     Column: 16     Word: 3612" FontSize="16" TextAlignment="Right" Padding="0,1.3,10,0" Foreground="Gray" FontWeight="Bold" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="466"/>
-        <TextBlock x:Name="TextBlock_MsgBar" Grid.Row="1" Grid.Column="1" Text="Saved" FontSize="16" TextAlignment="Left" Padding="10,1.3,0,0" Foreground="Gray" FontWeight="Bold" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="550"/>
+        <TextBlock x:Name="TextBlock_StateBar" Grid.Row="1" Grid.Column="1" Text="N/A" FontSize="16" TextAlignment="Right" Padding="0,1.3,20,0" Foreground="Gray" FontWeight="Bold" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="466"/>
+        <TextBlock x:Name="TextBlock_MsgBar" Grid.Row="1" Grid.Column="1" FontSize="16" TextAlignment="Left" Padding="10,1.3,0,0" Foreground="Gray" FontWeight="Bold" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="550"/>
         <!-- 右上角命令栏 -->
         <StackPanel Name="StackPanel_Commands" Grid.Column="1" Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Right">
             <Image ToolTip="创建一个贴纸" Source="/Hemerocallis;component/Assets/UI_Btn_Refer.png" Opacity="0.4" Height="48" Width="48" MouseEnter="Image_TRBtn_MouseEnter" MouseLeave="Image_TRBtn_MouseLeave"/>
             <Image ToolTip="管理工程" Source="/Hemerocallis;component/Assets/UI_Btn_Note.png" Opacity="0.4" Height="48" Width="48" MouseEnter="Image_TRBtn_MouseEnter" MouseLeave="Image_TRBtn_MouseLeave"/>
             <Rectangle Width="2" Margin="10,5,10,5" Fill="Black" Opacity="0.1"/>
             <Image ToolTip="新建" Source="/Hemerocallis;component/Assets/UI_Btn_New.png" Opacity="0.4" Height="48" Width="48" MouseEnter="Image_TRBtn_MouseEnter" MouseLeave="Image_TRBtn_MouseLeave"/>
-            <Image ToolTip="保存" Source="/Hemerocallis;component/Assets/UI_Btn_Save.png" Opacity="0.4" Height="48" Width="48" MouseEnter="Image_TRBtn_MouseEnter" MouseLeave="Image_TRBtn_MouseLeave"/>
+            <Image ToolTip="保存" Source="/Hemerocallis;component/Assets/UI_Btn_Save.png" Opacity="0.4" Height="48" Width="48" MouseEnter="Image_TRBtn_MouseEnter" MouseLeave="Image_TRBtn_MouseLeave" MouseLeftButtonDown="Image_MouseLeftButtonDown_SaveBtn"/>
             <Image ToolTip="菜单" Source="/Hemerocallis;component/Assets/UI_Btn_Menu.png" Opacity="0.4" Height="48" Width="48" MouseLeftButtonUp="Image_MouseLeftButtonUp_MenuBtn" MouseEnter="Image_TRBtn_MouseEnter" MouseLeave="Image_TRBtn_MouseLeave"/>
         </StackPanel>
         <!-- 左上角章节名 -->
@@ -106,8 +106,9 @@
             <ContentControl Width="100"
                       Height="100"
                       Padding="1"
-                      Canvas.Left="710"
-                      Canvas.Top="300"
+                      Canvas.Left="746"
+                      Canvas.Top="579"
+                      Visibility="Hidden"
                       Style="{StaticResource DesignerItemStyle}">
                 <Ellipse IsHitTestVisible="False">
                     <Ellipse.Fill>
