--- a/Lyyneheym/Hemerocallis/Forms/MainWindow.xaml
+++ b/Lyyneheym/Hemerocallis/Forms/MainWindow.xaml
@@ -76,7 +76,7 @@
             </Grid.Background>
         </Grid>
         <!-- 正文页面 -->
-        <Frame Name="Frame_RTB" Grid.Row="1" Grid.Column="1" NavigationUIVisibility="Hidden" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Source="/Hemerocallis;component/Forms/IndexPage.xaml" />
+        <Frame Visibility="Visible" Name="Frame_RTB" Grid.Row="1" Grid.Column="1" NavigationUIVisibility="Hidden" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Source="/Hemerocallis;component/Forms/IndexPage.xaml" />
         <!-- 状态栏 -->
         <TextBlock x:Name="TextBlock_StateBar" Grid.Row="1" Grid.Column="1" Text="N/A" FontSize="16" TextAlignment="Right" Padding="0,1.3,20,0" Foreground="Gray" FontWeight="Bold" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="466"/>
         <TextBlock x:Name="TextBlock_MsgBar" Grid.Row="1" Grid.Column="1" FontSize="16" TextAlignment="Left" Padding="10,1.3,0,0" Foreground="Gray" FontWeight="Bold" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="550"/>
@@ -85,7 +85,7 @@
             <Image ToolTip="创建一个贴纸" Source="/Hemerocallis;component/Assets/UI_Btn_Refer.png" Opacity="0.4" Height="48" Width="48" MouseEnter="Image_TRBtn_MouseEnter" MouseLeave="Image_TRBtn_MouseLeave"/>
             <Image ToolTip="管理工程" Source="/Hemerocallis;component/Assets/UI_Btn_Note.png" Opacity="0.4" Height="48" Width="48" MouseEnter="Image_TRBtn_MouseEnter" MouseLeave="Image_TRBtn_MouseLeave"/>
             <Rectangle Width="2" Margin="10,5,10,5" Fill="Black" Opacity="0.1"/>
-            <Image ToolTip="新建" Source="/Hemerocallis;component/Assets/UI_Btn_New.png" Opacity="0.4" Height="48" Width="48" MouseEnter="Image_TRBtn_MouseEnter" MouseLeave="Image_TRBtn_MouseLeave"/>
+            <Image ToolTip="新建" Source="/Hemerocallis;component/Assets/UI_Btn_New.png" Opacity="0.4" Height="48" Width="48" MouseEnter="Image_TRBtn_MouseEnter" MouseLeave="Image_TRBtn_MouseLeave" MouseLeftButtonUp="Image_MouseLeftButtonUp_NewBtn"/>
             <Image ToolTip="保存" Source="/Hemerocallis;component/Assets/UI_Btn_Save.png" Opacity="0.4" Height="48" Width="48" MouseEnter="Image_TRBtn_MouseEnter" MouseLeave="Image_TRBtn_MouseLeave" MouseLeftButtonDown="Image_MouseLeftButtonDown_SaveBtn"/>
             <Image ToolTip="菜单" Source="/Hemerocallis;component/Assets/UI_Btn_Menu.png" Opacity="0.4" Height="48" Width="48" MouseLeftButtonUp="Image_MouseLeftButtonUp_MenuBtn" MouseEnter="Image_TRBtn_MouseEnter" MouseLeave="Image_TRBtn_MouseLeave"/>
         </StackPanel>
