--- a/Lyyneheym/Hemerocallis/Forms/StatisticsWindow.xaml
+++ b/Lyyneheym/Hemerocallis/Forms/StatisticsWindow.xaml
@@ -1,12 +1,39 @@
-﻿<Window x:Class="Yuri.Hemerocallis.Forms.StatisticsWindow"
+﻿<controls:MetroWindow x:Class="Yuri.Hemerocallis.Forms.StatisticsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Yuri.Hemerocallis.Forms"
+        xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
         mc:Ignorable="d"
-        Title="StatisticsWindow" Height="300" Width="300">
+        Title="Statistics" Height="280" Width="255" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="50*"/>
+            <ColumnDefinition Width="50*"/>
+        </Grid.ColumnDefinitions>
+        <Label Grid.Column="0" Content="统计" Foreground="DarkCyan" FontSize="28" HorizontalAlignment="Left" VerticalAlignment="Top" Height="43" Width="121" Margin="1,-3,0,0"/>
+        <TextBlock Grid.Column="0" Padding="15,5,5,5" LineHeight="22" Margin="0,45,0,0">
+            字数<LineBreak/>
+            字符数（不计空格）<LineBreak/>
+            字符数（计空格）<LineBreak/>
+            段落数<LineBreak/>
+            中文汉字<LineBreak/>
+            英文单词<LineBreak/>
+            日文假名<LineBreak/>
+            朝鲜文字母<LineBreak/>
+            标点符号<LineBreak/>
+        </TextBlock>
+        <TextBlock Name="TextBlock_Count" Grid.Column="1" Padding="5,5,15,5" LineHeight="22" Margin="0,45,0,0" TextAlignment="Right">
+            0<LineBreak/>
+            0<LineBreak/>
+            0<LineBreak/>
+            0<LineBreak/>
+            0<LineBreak/>
+            0<LineBreak/>
+            0<LineBreak/>
+            0<LineBreak/>
+            0<LineBreak/>
+        </TextBlock>
     </Grid>
-</Window>
+</controls:MetroWindow>
