--- a/Lyyneheym/Hemerocallis/Forms/MainWindow.xaml
+++ b/Lyyneheym/Hemerocallis/Forms/MainWindow.xaml
@@ -1,10 +1,10 @@
-﻿<controls:MetroWindow
+﻿<controls:MetroWindow x:Class="Yuri.Hemerocallis.Forms.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        xmlns:UISupport="clr-namespace:Yuri.Hemerocallis.UISupport" x:Class="Yuri.Hemerocallis.Forms.MainWindow"
+        xmlns:UISupport="clr-namespace:Yuri.Hemerocallis.UISupport"
         mc:Ignorable="d" WindowTransitionsEnabled="False"
 		TextOptions.TextFormattingMode="Display" TextOptions.TextRenderingMode="ClearType"
                       Title="Hemerocallis" Height="720" Width="1280" MinWidth="1024" MinHeight="576" WindowStartupLocation="CenterScreen" KeyDown="MetroWindow_KeyDown" Closing="MetroWindow_Closing">
@@ -82,7 +82,7 @@
         <TextBlock x:Name="TextBlock_MsgBar" Grid.Row="1" Grid.Column="1" FontSize="16" TextAlignment="Left" Padding="10,1.3,0,0" Foreground="Gray" FontWeight="Bold" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="550"/>
         <!-- 右上角命令栏 -->
         <StackPanel Name="StackPanel_Commands" Grid.Column="1" Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Image ToolTip="创建一个贴纸" Source="/Hemerocallis;component/Assets/UI_Btn_Refer.png" Opacity="0.4" Height="48" Width="48" MouseEnter="Image_TRBtn_MouseEnter" MouseLeave="Image_TRBtn_MouseLeave"/>
+            <Image ToolTip="创建一个贴纸" Source="/Hemerocallis;component/Assets/UI_Btn_Refer.png" Opacity="0.4" Height="48" Width="48" MouseEnter="Image_TRBtn_MouseEnter" MouseLeave="Image_TRBtn_MouseLeave" MouseLeftButtonUp="Image_MouseLeftButtonUp_TipBtn"/>
             <Image ToolTip="管理工程" Source="/Hemerocallis;component/Assets/UI_Btn_Note.png" Opacity="0.4" Height="48" Width="48" MouseEnter="Image_TRBtn_MouseEnter" MouseLeave="Image_TRBtn_MouseLeave"/>
             <Rectangle Width="2" Margin="10,5,10,5" Fill="Black" Opacity="0.1"/>
             <Image ToolTip="新建" Source="/Hemerocallis;component/Assets/UI_Btn_New.png" Opacity="0.4" Height="48" Width="48" MouseEnter="Image_TRBtn_MouseEnter" MouseLeave="Image_TRBtn_MouseLeave" MouseLeftButtonUp="Image_MouseLeftButtonUp_NewBtn"/>
@@ -110,13 +110,13 @@
             </TreeView.ContextMenu>
         </TreeView>
         <!-- 便签层 -->
-        <Canvas Visibility="Visible" x:Name="TipCanvas" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Grid.RowSpan="2">
+        <Canvas Visibility="Hidden" x:Name="TipCanvas" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Grid.RowSpan="2">
             <ContentControl Width="100"
                       Height="100"
                       Padding="1"
                       Canvas.Left="746"
                       Canvas.Top="579"
-                      Visibility="Hidden"
+                      Visibility="Visible"
                       Style="{StaticResource DesignerItemStyle}">
                 <Ellipse IsHitTestVisible="False">
                     <Ellipse.Fill>
